# fel-master-thesis

./: .travis-ci.yml  .travis.yml  CMakeLists.txt  README.md
edet/: CMakeLists.txt  main.cpp
h52tpx/: CMakeLists.txt  README.md  main.cpp
include/cal/: cal.h
libcal/: CMakeLists.txt  README.md
libcal/include/cal/: cal.h  edge.h  frame.h  h5.h  matrix.h  measure.h  primitives.h  ransac.h  stride.h
libcal/src/: dummy.cpp  h5source.cpp
src/: dummy.cpp
tpx2h5/: CMakeLists.txt  README.md  main.cpp
